# coinhslsolve

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
include/: Matrix.hpp  ma27.hpp
test/: CMakeLists.txt  main.cpp
